Migrate headless audio core to Gradle Kotlin DSL with Java 25 toolchain.
Add single-module Gradle build compiling vendored codecs and musique-core
audio paths only, Kotlin playback order and PlayerApi, EncoderOptions to
replace XML Configuration for encoders, and FieldValues under model package.
Enable Foojay toolchain provisioning, Gradle wrapper, and ignore build dirs.

Co-authored-by: Sn1waR <1783671926@qq.com>